<resources>
    <string name="app_name">SimpleNavigator</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_origin_address">Enter origin address</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="find_path">Find path</string>
</resources>
